# Cyclemetry

./: .gitignore  CLAUDE.md  DESIGN.md  LICENSE  README.md  TODOS.md  package.json
.githooks/: pre-commit
.github/workflows/: ci.yml  linux-build.yml  release.yml  website.yml  windows-build.yml
app/: README.md  jsconfig.json  package.json  vite.config.js
app/public/templates/: initconfig.json  safa_brian_a_4k_gradient.json  walker_crit_a.json
app/src/: app.svelte  index.css
app/src/api/: backend.js  gpxUtils.js  renderVideo.js
demo/: .gitignore  README.md  capture.py  coord-capture.py  gen.py  package-lock.json  package.json  probe.py  record.py  remotion.config.ts  storyboard.coords.json  tsconfig.json
demo/public/: coord-picker.html
demo/src/: Demo.tsx  Root.tsx  global.d.ts  recording.generated.ts  timeline.generated.ts  timeline.ts
resources/brand/: README.md
scripts/: build-wasm.mjs  dev.mjs  release-check.mjs  release.mjs  sync-version.mjs  sync-wasm-web.mjs  update-templates-readme.mjs
scripts/git-hooks/: pre-commit  pre-push
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/render-core/: Cargo.toml
src-tauri/render-core/src/: activity.rs  chart.rs  color.rs  frame.rs  lib.rs  template.rs  units.rs
src-tauri/render-wasm/: Cargo.toml
src-tauri/render-wasm/src/: main.rs
src-tauri/src/: activity.rs  lib.rs  recent.rs  strava.rs
src-tauri/src/render/: activity.rs  chart.rs  frame.rs  mod.rs  scene.rs  template.rs  units.rs  video.rs
templates/: README.md
templates/aaron/: README.md  aaron.json
templates/crit/: README.md  crit.json
templates/jeff/: README.md  jeff.json
templates/norcal/: README.md  norcal.json
templates/safa/: README.md  safa.json
templates/strava/: README.md  strava.json
templates/will/: README.md  will.json
website/: .env.local.example  .gitignore  mdx-components.jsx  next.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  theme.config.jsx  tsconfig.json
website/app/: globals.css  layout.jsx  not-found.jsx
website/components/: Fund.jsx  GitHubStarsLink.jsx  InstallDownloadGrid.jsx  Showcase.jsx  Templates.jsx  Videos.jsx
website/content/: _meta.js  comparison.mdx  contributing.mdx  developing.mdx  faq.mdx  fund.json  fund.mdx  index.mdx  templates.json  templates.mdx
website/patches/: nextra-theme-docs@4.6.1.patch
website/public/: CNAME
(+83 files in other folders)
