[package]
name = "Cyclemetry"
version = "0.3.0"
description = "Tool for creating telemetry video overlays"
authors = ["Walker Sutton"]
license = "MIT"
repository = "https://github.com/walkersutton/cyclemetry"
edition = "2024"
rust-version = "1.95.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["protocol-asset"] }
tauri-plugin-log = "2.8.0"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-shell = "2.3.5"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
skia-safe = { version = "0", features = ["textlayout"] }
rayon = "1"
crossbeam-channel = "0.5"
libc = "0.2"
quick-xml = "0.37"
chrono = { version = "0.4", features = ["serde"] }
fitparser = "0.6"
resvg = "0.44"
image-webp = "0.1.3"
wuff = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.3"
objc2-app-kit = { version = "0.3.2", features = ["NSApplication", "NSImage", "NSMenu", "NSMenuItem"] }
objc2-foundation = { version = "0.3.2", features = ["NSData", "NSString"] }
