[package]
name = "render-core"
version = "0.1.0"
description = "Platform-agnostic telemetry overlay renderer (shared by desktop and web)"
license = "MIT"
edition = "2024"
rust-version = "1.95.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
quick-xml = "0.37"
chrono = { version = "0.4", features = ["serde"] }
fitparser = "0.6"
resvg = "0.44"
image-webp = "0.1.3"
skia-safe = { version = "0", features = ["textlayout"] }
