[package]
name = "render-wasm"
version = "0.1.0"
description = "Emscripten/wasm wrapper around render-core for the web companion"
license = "MIT"
edition = "2024"
rust-version = "1.95.0"

[[bin]]
name = "cyclemetry_render"
path = "src/main.rs"

[dependencies]
render-core = { path = "../render-core" }
serde_json = "1.0"
skia-safe = { version = "0", features = ["textlayout"] }
